--- a/arch/arm/configs/ruby_defconfig
+++ b/arch/arm/configs/ruby_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.16 Kernel Configuration
+# Linux/arm 3.0.74 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -281,6 +281,7 @@ CONFIG_MSM_SOC_REV_NONE=y
 # CONFIG_MSM_SOC_REV_A is not set
 CONFIG_ARCH_MSM_SCORPION=y
 CONFIG_MSM_SMP=y
+# CONFIG_MSM_MPDEC is not set
 CONFIG_ARCH_MSM_SCORPIONMP=y
 CONFIG_MSM_RPM=y
 CONFIG_MSM_MPM=y
@@ -311,6 +312,7 @@ CONFIG_MSM_ADM3=y
 # CONFIG_MACH_VERDI_LTE is not set
 # CONFIG_MACH_HOLIDAY is not set
 # CONFIG_MACH_VIGOR is not set
+# CONFIG_MACH_DOUBLESHOT is not set
 CONFIG_MACH_RUBY=y
 # CONFIG_MSM_USE_TSIF1 is not set
 CONFIG_MSM_MDP40=y
@@ -534,6 +536,8 @@ CONFIG_CPU_HAS_PMU=y
 # CONFIG_ARM_ERRATA_754322 is not set
 # CONFIG_ARM_ERRATA_754327 is not set
 # CONFIG_KSAPI is not set
+# CONFIG_ARM_ERRATA_764369 is not set
+# CONFIG_ARM_ERRATA_775420 is not set
 CONFIG_ARM_GIC=y
 # CONFIG_FIQ_DEBUGGER is not set
 
@@ -543,7 +547,6 @@ CONFIG_ARM_GIC=y
 # CONFIG_PCI_SYSCALL is not set
 # CONFIG_ARCH_SUPPORTS_MSI is not set
 # CONFIG_PCCARD is not set
-# CONFIG_ARM_ERRATA_764369 is not set
 
 #
 # Kernel Features
@@ -1100,6 +1103,7 @@ CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_SYS_HYPERVISOR is not set
 CONFIG_GENLOCK=y
 CONFIG_GENLOCK_MISCDEVICE=y
+# CONFIG_SYNC is not set
 # CONFIG_CONNECTOR is not set
 # CONFIG_MTD is not set
 # CONFIG_PARPORT is not set
@@ -1204,6 +1208,7 @@ CONFIG_MPU_SENSORS_TIMERIRQ=y
 # Motorola TS 27.010 Mux driver over UART
 #
 # CONFIG_MOT_FEAT_TS27010MUX_UART is not set
+CONFIG_FSYNC_CONTROL=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
@@ -1255,6 +1260,7 @@ CONFIG_WLAN=y
 # CONFIG_B43LEGACY is not set
 # CONFIG_BCM4329 is not set
 # CONFIG_BCMDHD is not set
+# CONFIG_BCMDHD_DS is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
 # CONFIG_LIBERTAS is not set
@@ -1266,10 +1272,8 @@ CONFIG_WLAN=y
 CONFIG_WL12XX_MENU=m
 CONFIG_WL12XX=m
 # CONFIG_WL12XX_HT is not set
-CONFIG_WL1271=m
-# CONFIG_WL1271_SPI is not set
-CONFIG_WL1271_SDIO=m
-# CONFIG_WL12XX_SDIO_TEST is not set
+# CONFIG_WL12XX_SPI is not set
+# CONFIG_WL12XX_SDIO is not set
 CONFIG_WL12XX_PLATFORM_DATA=y
 CONFIG_TIWLAN_POWER_CONTROL_FUNC=y
 # CONFIG_ZD1211RW is not set
@@ -1418,6 +1422,7 @@ CONFIG_PMIC8058_OTHC=y
 # CONFIG_BOSCH_BMA150 is not set
 # CONFIG_INPUT_DUMMY_KEYPAD is not set
 # CONFIG_POWER_KEY_LED is not set
+# CONFIG_INPUT_OPTICALJOYSTICK is not set
 
 #
 # Hardware I/O ports
@@ -1765,7 +1770,7 @@ CONFIG_THERMAL_PM8901=y
 # CONFIG_THERMAL_PM8058 is not set
 # CONFIG_THERMAL_MSM_POPMEM is not set
 CONFIG_THERMAL_TSENS=y
-# CONFIG_THERMAL_TSENS8960 is not set
+# CONFIG_THERMAL_TSENS8x60 is not set
 # CONFIG_THERMAL_PM8XXX is not set
 # CONFIG_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
@@ -1872,6 +1877,39 @@ CONFIG_MEDIA_SUPPORT=y
 #
 CONFIG_MSM_CAMERA=y
 # CONFIG_MSM_CAMERA_DEBUG is not set
+CONFIG_DS_MSM_CAMERA=y
+# CONFIG_DS_MSM_CAMERA_DEBUG is not set
+
+#
+# Qualcomm MSM Camera And Video
+#
+# CONFIG_DS_MSM_CAMERA_LEGACY is not set
+# CONFIG_DS_MSM_CAMERA_7X30 is not set
+# CONFIG_DS_MSM_CAMERA_8X60 is not set
+# CONFIG_DS_CAMERA_ZSL is not set
+# CONFIG_DS_FLASH_BACKLIGHT_OFF is not set
+
+#
+# Camera Sensor Selection
+#
+# CONFIG_DS_MT9T013 is not set
+# CONFIG_DS_MT9D112 is not set
+# CONFIG_DS_IMX105 is not set
+# CONFIG_DS_MT9P012 is not set
+# CONFIG_DS_S5K3E2FX is not set
+# CONFIG_DS_S5K4E1GX is not set
+# CONFIG_DS_S5K4E5YX is not set
+# CONFIG_DS_S5K6AAFX is not set
+# CONFIG_DS_OV8810 is not set
+# CONFIG_DS_OV8830 is not set
+# CONFIG_DS_OV9665 is not set
+# CONFIG_DS_S5K3H1GX is not set
+# CONFIG_DS_S5K3H2YX is not set
+# CONFIG_DS_MSM_GEMINI is not set
+CONFIG_DS_MSM_VPE=y
+# CONFIG_DS_MT9V113 is not set
+# CONFIG_DS_SP3D is not set
+# CONFIG_DS_MT9D015 is not set
 # CONFIG_MSM_CAMERA_V4L2 is not set
 # CONFIG_MSM_CAMERA_LEGACY is not set
 # CONFIG_MSM_CAMERA_7X30 is not set
@@ -1884,6 +1922,7 @@ CONFIG_CAMERA_ZSL=y
 # Camera Sensor Selection
 #
 # CONFIG_MT9D113 is not set
+# CONFIG_IMX105 is not set
 # CONFIG_IMX074 is not set
 # CONFIG_WEBCAM_OV7692 is not set
 # CONFIG_WEBCAM_OV9726 is not set
@@ -2226,6 +2265,7 @@ CONFIG_USB_ARCH_HAS_HCD=y
 # CONFIG_USB_ARCH_HAS_OHCI is not set
 CONFIG_USB_ARCH_HAS_EHCI=y
 CONFIG_USB=y
+CONFIG_USB_OTG_HOST=y
 # CONFIG_USB_DEBUG is not set
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 
@@ -2237,7 +2277,6 @@ CONFIG_USB_DEVICE_CLASS=y
 # CONFIG_USB_DYNAMIC_MINORS is not set
 CONFIG_USB_SUSPEND=y
 CONFIG_USB_OTG=y
-CONFIG_USB_OTG_HOST=y
 # CONFIG_USB_OTG_WHITELIST is not set
 # CONFIG_USB_OTG_BLACKLIST_HUB is not set
 # CONFIG_USB_MON is not set
