--- a/arch/arm/configs/ruby_defconfig
+++ b/arch/arm/configs/ruby_defconfig
@@ -1103,7 +1103,7 @@ CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_SYS_HYPERVISOR is not set
 CONFIG_GENLOCK=y
 CONFIG_GENLOCK_MISCDEVICE=y
-# CONFIG_SYNC is not set
+CONFIG_SYNC=y
 # CONFIG_CONNECTOR is not set
 # CONFIG_MTD is not set
 # CONFIG_PARPORT is not set
@@ -1272,8 +1272,10 @@ CONFIG_WLAN=y
 CONFIG_WL12XX_MENU=m
 CONFIG_WL12XX=m
 # CONFIG_WL12XX_HT is not set
-# CONFIG_WL12XX_SPI is not set
-# CONFIG_WL12XX_SDIO is not set
+CONFIG_WL1271=m
+# CONFIG_WL1271_SPI is not set
+CONFIG_WL1271_SDIO=m
+# CONFIG_WL12XX_SDIO_TEST is not set
 CONFIG_WL12XX_PLATFORM_DATA=y
 CONFIG_TIWLAN_POWER_CONTROL_FUNC=y
 # CONFIG_ZD1211RW is not set
