ruby: update defconfig

--- a/arch/arm/configs/ruby_defconfig
+++ b/arch/arm/configs/ruby_defconfig
@@ -1105,6 +1105,7 @@ CONFIG_EXTRA_FIRMWARE=""
 CONFIG_GENLOCK=y
 CONFIG_GENLOCK_MISCDEVICE=y
 CONFIG_SYNC=y
+# CONFIG_SW_SYNC is not set
 # CONFIG_CONNECTOR is not set
 # CONFIG_MTD is not set
 # CONFIG_PARPORT is not set
