ruby: update defconfig

--- a/arch/arm/configs/ruby_defconfig
+++ b/arch/arm/configs/ruby_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.74 Kernel Configuration
+# Linux/arm 3.0.77 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -1491,7 +1491,7 @@ CONFIG_DIAG_OVER_USB=y
 CONFIG_DIAG_SDIO_PIPE=y
 
 #
-# HSIC support for DIAG
+# HSIC/SMUX support for DIAG
 #
 # CONFIG_TTY_PRINTK is not set
 # CONFIG_HVC_DCC is not set
@@ -2367,16 +2367,23 @@ CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG_FILES is not set
 # CONFIG_USB_GADGET_DEBUG_FS is not set
 CONFIG_USB_GADGET_VBUS_DRAW=2
-CONFIG_USB_GADGET_SELECTED=y
-# CONFIG_USB_GADGET_FUSB300 is not set
-# CONFIG_USB_GADGET_R8A66597 is not set
-# CONFIG_USB_GADGET_PXA_U2O is not set
-# CONFIG_USB_GADGET_M66592 is not set
-CONFIG_USB_GADGET_CI13XXX_MSM=y
+CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=2
+
+#
+# USB Peripheral Controller
+#
+# CONFIG_USB_FUSB300 is not set
+# CONFIG_USB_R8A66597 is not set
+# CONFIG_USB_MV_UDC is not set
+# CONFIG_USB_M66592 is not set
+# CONFIG_USB_NET2272 is not set
 CONFIG_USB_CI13XXX_MSM=y
-# CONFIG_USB_GADGET_MSM_72K is not set
-# CONFIG_USB_GADGET_DUMMY_HCD is not set
+# CONFIG_USB_CI13XXX_MSM_HSIC is not set
+# CONFIG_USB_DWC3_MSM is not set
+# CONFIG_USB_MSM_72K is not set
+# CONFIG_USB_DUMMY_HCD is not set
 CONFIG_USB_GADGET_DUALSPEED=y
+# CONFIG_USB_GADGET_SUPERSPEED is not set
 # CONFIG_USB_ZERO is not set
 # CONFIG_USB_AUDIO is not set
 # CONFIG_USB_ETH is not set
@@ -2390,6 +2397,7 @@ CONFIG_USB_GADGET_DUALSPEED=y
 # CONFIG_USB_G_PRINTER is not set
 CONFIG_USB_G_ANDROID=y
 # CONFIG_USB_CDC_COMPOSITE is not set
+# CONFIG_USB_G_ACM_MS is not set
 # CONFIG_USB_G_MULTI is not set
 # CONFIG_USB_G_HID is not set
 # CONFIG_USB_G_DBGP is not set
@@ -2404,7 +2412,7 @@ CONFIG_RMNET_SMD_SDIO_CTL_CHANNEL=8
 CONFIG_RMNET_SMD_SDIO_DATA_CHANNEL=8
 CONFIG_RMNET_SDIO_SMD_DATA_CHANNEL="DATA40"
 # CONFIG_USB_ANDROID_RMNET_CTRL_SMD is not set
-CONFIG_USB_HTC_SWITCH_STUB=y
+# CONFIG_USB_ANDROID_CDC_ECM is not set
 
 #
 # OTG and related infrastructure
