--- a/arch/arm/configs/ruby_defconfig
+++ b/arch/arm/configs/ruby_defconfig
@@ -479,7 +479,6 @@ CONFIG_MSM_QDSP6_APR=y
 # CONFIG_RPC_VER_60001 is not set
 CONFIG_MSM_SPM_V1=y
 # CONFIG_MSM_SPM_V2 is not set
-CONFIG_MSM_MULTIMEDIA_USE_ION=y
 CONFIG_FOOTPRINT_IRQ=y
 
 #
@@ -1962,8 +1961,7 @@ CONFIG_MT9D015=y
 # Graphics support
 #
 # CONFIG_DRM is not set
-CONFIG_ION=y
-CONFIG_ION_MSM=y
+# CONFIG_ION is not set
 CONFIG_MSM_KGSL=y
 # CONFIG_MSM_KGSL_CFF_DUMP is not set
 # CONFIG_MSM_KGSL_PSTMRTMDMP_CP_STAT_NO_DETAIL is not set
